profile picture can now be added to a folder and viewed

--- a/pages/profile.html
+++ b/pages/profile.html
@@ -106,7 +106,7 @@
     </div>
     <!--staff picture column -->
     <div class="col-md-2">
-      <img src="../img/placeHolder.JPG" alt="" class="img-circle" width="175" height="175" id="profile_picture" style="margin-top:70%;">
+      <img src="" alt="" class="img-circle" width="175" height="175" id="profile_picture_view" style="margin-top:70%;">
     </div>
   </div>
 
@@ -252,7 +252,7 @@
           </div>
           <div class="col-md-3">
             <div id="profile_pic_section">
-              <img src="../img/placeHolder.JPG" alt="" class="img-circle" width="160" height="160" id="profile_picture">
+              <img src="" alt="" class="img-circle" width="160" height="160" id="edit_staff_profile_picture" name="edit_staff_profile_picture">
               <span id="profile_pic_span" style="color: red;"></span>
               <input type="file" name="image" class="form-control" id="picture_picker" onchange="validatePhoto()">
             </div>
